Closed Bug 350128 Opened 19 years ago Closed 18 years ago

[FIXr]"ASSERTION: next-in-flow has different content" with XBL, block-in-inline

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha8

People

(Reporter: jruderman, Assigned: bzbarsky)

References

Details

(Keywords: assertion, testcase)

Attachments

(2 files)

This testcase triggers ###!!! ASSERTION: next-in-flow has different content: '!kidFrame || parentFrame->GetContent() == aParentContent', file /Users/admin/trunk/mozilla/layout/base/nsCSSFrameConstructor.cpp, line 11352
Attached file testcase
Still happens on trunk.
The assert is just bogus: there's no reason aParentContent (which is the content tree parent of aContent) should be the content of the parent of aContent's frame. Especially so if XBL insertion points are involved, as here.
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #274361 - Flags: superreview?(roc)
Attachment #274361 - Flags: review?(roc)
OS: Mac OS X → All
Hardware: Macintosh → All
Summary: "ASSERTION: next-in-flow has different content" with XBL, block-in-inline → [FIX]"ASSERTION: next-in-flow has different content" with XBL, block-in-inline
Attachment #274361 - Flags: superreview?(roc)
Attachment #274361 - Flags: superreview+
Attachment #274361 - Flags: review?(roc)
Attachment #274361 - Flags: review+
Summary: [FIX]"ASSERTION: next-in-flow has different content" with XBL, block-in-inline → [FIXr]"ASSERTION: next-in-flow has different content" with XBL, block-in-inline
Comment on attachment 274361 [details] [diff] [review] Remove the bogus assert Removes a bogus assert for yet more testing peace.
Attachment #274361 - Flags: approval1.9?
Comment on attachment 274361 [details] [diff] [review] Remove the bogus assert a19=dbaron
Attachment #274361 - Flags: approval1.9? → approval1.9+
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M8
Flags: in-testsuite?
Crashtest checked in.
Flags: in-testsuite? → in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: