Remove bogus assert.  Bug 350128, r+sr=roc, a=dbaron